[gd_scene load_steps=3 format=3 uid="uid://b0gmmb6vucy2n"]

[ext_resource type="Script" path="res://scripts/common/lever.gd" id="1_rg1h6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpdvg"]
size = Vector2(29, 49)

[node name="lever" type="Node2D"]
script = ExtResource("1_rg1h6")

[node name="lever_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever_area"]
position = Vector2(0, -24.5)
shape = SubResource("RectangleShape2D_vpdvg")

[node name="popup_text" type="Label" parent="."]
visible = false
offset_left = -52.0
offset_right = 55.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "move lever"

[connection signal="body_entered" from="lever_area" to="." method="_on_lever_area_body_entered"]
[connection signal="body_exited" from="lever_area" to="." method="_on_lever_area_body_exited"]
